SERVER-8873 Correctly decide if a term in a text field is a stopword